--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -77,7 +77,7 @@ header h1 {
   color: #fff;
   line-height: 1;
   margin-bottom: 0.2em;
-  width: 540px;
+  //width: 540px;
 }
 
 header h2 {
@@ -85,7 +85,7 @@ header h2 {
   color: #9ddcff;
   font-weight: normal;
   line-height: 1.3;
-  width: 540px;
+  //width: 540px;
   letter-spacing: 0;
 }
 
@@ -477,3 +477,41 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
+
+
+/* Kidsatwork styles */
+ .center {
+        text-align: center;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      img {
+        margin: 20px;
+        width: 250px;
+      }
+      button {
+        display: inline-block;
+        padding: 9px 15px 5px;
+        margin-bottom: 0;
+        background: #019cde;
+        font-size: 15px;
+        font-size: 1.07142857142857rem;
+        font-weight: bold;
+        line-height: 1.4545em;
+        -webkit-font-smoothing: antialiased;
+        color: #fff;
+        text-align: center;
+        vertical-align: middle;
+        cursor: pointer;
+        border-radius: 5px;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+      }
+
+      input {
+        padding: 12px;
+        font-size: 24px;
+        width: 200px;
+        text-align: center;
+      }
